Fixing margin on Subscribe to Pages categories and button alignment

--- a/app/stylesheets/non-modular/_verification.sass
+++ b/app/stylesheets/non-modular/_verification.sass
@@ -27,6 +27,7 @@
     text-align: center
     a.next-button
       width: 100% !important
+      float: right !important
   .error
     clear: both
     font-family: $body
